--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^2.0.52",
     "@hookform/resolvers": "^5.2.2",
+    "@paralleldrive/cuid2": "^3.1.0",
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.35.4",
     "@prisma/client": "^6.17.1",
@@ -49,7 +50,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
-    "@xyflow/react": "^12.8.6",
+    "@xyflow/react": "^12.9.0",
     "ai": "^5.0.76",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
