--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "ngrok:dev": "dotenv ngrok http --url=$NGROK_URL 3000",
     "inngest:dev": "inngest-cli dev",
     "dev:all": "mprocs"
   },
@@ -92,6 +93,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/toposort": "^2.0.7",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "inngest-cli": "^1.12.1",
