--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "ngrok:dev": "dotenv ngrok http --url=$NGROK_URL 3000",
     "inngest:dev": "inngest-cli dev",
+    "migrate:dev": "npx prisma format && npx prisma migrate dev",
     "dev:all": "mprocs"
   },
   "dependencies": {
@@ -62,6 +63,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "handlebars": "^4.7.8",
+    "html-entities": "^2.6.0",
     "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
     "jotai": "^2.15.0",
